# semantic-room-graph

./: .gitignore  README.md
docs/: ros2_architecture_messages_design.docx  semantic_room_graphs_final.docx
semantic_map_core/: package.xml  setup.cfg  setup.py
semantic_map_core/config/: core_params.yaml
semantic_map_core/launch/: full_pipeline.launch.py  stage_a_graph_construction.launch.py
semantic_map_core/semantic_map_core/: exploration_planner_node.py  graph_store_node.py  graph_visualizer_node.py  map_ingestor_node.py  navigator_executor_node.py  pose_generator_node.py  region_segmentation_node.py  semantic_fusion_node.py  topological_graph_builder_node.py
semantic_map_msgs/: CMakeLists.txt  package.xml
semantic_map_msgs/msg/: OCRResult.msg  QueryRequest.msg  QueryResult.msg  VLMResult.msg
semantic_map_perception/config/: perception_params.yaml
semantic_map_perception/semantic_map_perception/: perception_collector_node.py  vlm_labeler_node.py
semantic_map_query/: package.xml
semantic_map_query/config/: query_params.yaml
semantic_map_query/launch/: stage_b_query.launch.py
semantic_map_query/semantic_map_query/: instruction_parser_node.py  semantic_retriever_node.py  task_navigator_node.py
src/semantic_map_core/config/: core_params.yaml
src/semantic_map_core/semantic_map_core/: exploration_planner_node.py  navigator_executor_node.py  pose_generator_node.py  region_segmentation_node.py  topological_graph_builder_node.py
src/semantic_map_msgs/msg/: QueryCandidate.msg  RegionEdge.msg  RegionNode.msg  RegionObservation.msg  SemanticGraph.msg
src/semantic_map_perception/: package.xml  setup.cfg  setup.py
src/semantic_map_perception/config/: perception_params.yaml
src/semantic_map_perception/semantic_map_perception/: ocr_node.py
src/semantic_map_query/: setup.cfg  setup.py
src/semantic_map_query/semantic_map_query/: goal_resolver_node.py
src/sfm/: CMakeLists.txt  LICENSE  README.md  package.xml  sfm_controller_plugin.xml
src/sfm/config/: mppi_omni.yaml  mppi_omni_corrected.yaml  nav2_controller_sfm.yaml
src/sfm/docs/reference/: SocialForceModel (1).m
src/sfm/include/sfm_controller_plugin/: sfm_algorithm.hpp  sfm_controller.hpp
src/sfm/resource/: sfm
src/sfm/src/: sfm_algorithm.cpp  sfm_controller.cpp
